--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="container   flex-row">
+            <div class="logo">G3 Architects</div>
+            <ul class="flex-row">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+        </nav>
+
+        <div class="container | brand flex-coloum">
+            <div class="brand-tital">Brand New
+                Group of Architects
+            </div>
+            <div class="brand-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form,
+                by injected humour, or randomised words which don't look even</div>
+            <button type="button">Explore More
+            </button>
+        </div>
+        <div class="brand-img">
+            <img src="g3-architects-resources/images/banner.png" alt="">
+        </div>
+    </header>
+
+
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
